# com.devereux-henley

./: .cljfmt.edn  .dir-locals.el  .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  deps.edn  readme.md  workspace.edn
.claude/: settings.json
.clj-kondo/: config.edn
.clj-kondo/hooks/: migrations_test.clj
.config/polylith/: config.edn
.github/workflows/: pr-check.yml  publish-image.yml  tag-stable.yml
bases/rose-api/: deps.edn
bases/rpfm-scraper/: deps.edn
bases/rts-api/: Dockerfile  Makefile  README.md  deps.edn
bases/rts-data-deploy/: deps.edn
bases/rts-demo/: deps.edn
components/content-negotiation/: deps.edn
components/e2e/: package-lock.json  package.json  playwright.config.js
components/http/: deps.edn
components/jdbc/: deps.edn
components/rts-data/: deps.edn
components/rts-data-access/: deps.edn
components/rts-domain/: deps.edn
components/rts-web/: deps.edn
deploy/: .env.example  Caddyfile  README.md  docker-compose.yml
dev-env/: Containerfile  Makefile
docs/: api.md  backend-testing.md  database.md  draft-rules-rpfm-handoff.md  frontend.md  game-data.md  rpfm-scraper.md  rts-api.md  rts-data-deploy.md  skins.md
scripts/: migrate_is_unique.py  migrate_is_unique_fix.py  update_from_rpfm.py
todo/: asset-cdn-and-jar-slimming.md  content-negotiation-hateoas.md  features.md  fix-swagger.md  global-error-slot.md  htmx-oob-spa.md  missing-mp-mount-units.md  round-robin-pairing.md  scraping.md  stat-icon-gaps.md  unit-variants.json
tools/replay-parser/: Cargo.toml
tools/replay-parser/src/: main.rs
(+606 files in other folders)
